# intel8080-emulator

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  main.c  main.cpp  main.h  opcodes.h  run.cpp  run_tests.cpp  utilities.h
frontend/: cpm80vm.cpp  i8080_exts.cpp  main.cpp  run.cpp  test.cpp  test_cpm80vm.cpp  test_i8080.cpp  test_libi8080.cpp  test_utils.cpp  util.cpp
frontend/include/: cpm80vm.hpp  i8080_exts.hpp  run.hpp  test.hpp  util.hpp
frontends/shell/: main.cpp
include/: emu.hpp  keyintr.hpp
include/i8080/: i8080.h  i8080_opcodes.h  i8080_types.h
libcpm80vm/: CMakeLists.txt  sample_vm.c  sample_vm.h
libcpm80vm/examples/: CMakeLists.txt  simple_vm_ansi_noalloc.c  simple_vm_ansi_noalloc.h
libcpm80vm/examples/test_vm/: test_vm.c  test_vm.h
libcpm80vm/impl/: simple_vm_c90_noalloc.c
libcpm80vm/impl/simple_vm_c90/: simple_vm_c90.c  simple_vm_c90.h
libcpm80vm/include/: cpm80_bios.h  cpm80_defs.h  cpm80_devices.h  devices.h  emu.h  emu_consts.h  emu_debug.h  vm.h  vm_bios.h  vm_devices.h
libcpm80vm/include/cpm80vm/: bios.h  cpm80_bios_callcodes.h  cpm80_defs.h  cpm80_devices.h  cpm80_vm.h  devices.h  vm.h  vm_callno.h  vm_devices.h  vm_types.h
libcpm80vm/include/cpm80vm/internal/: vm_bios.h  vm_devices.h
libcpm80vm/src/: bios.c  cpm80_bios.c  cpm80_vm.c  strutil.c  vm.c
libcpm80vm/tests/: CPUTEST.COM
libi8080/: CMakeLists.txt
libi8080/include/: i8080.h  i8080_consts.h  i8080_mutex.h  i8080_opcodes.h  i8080_platform.h  i8080_sync.h
libi8080/include/i8080/: i8080.h  i8080_defs.h  i8080_msvc.h  i8080_opcodes.h  i8080_predef.h  i8080_sync.h  i8080_types.h
libi8080/src/: i8080.c  i8080_sync.c  interrupt.asm
libi8080/tests/: test.cpp
libi8080emu/include/: bios.h  devices.h  emu.h  emu_consts.h  emu_debug.h
libi8080emu/libi8080/include/: i8080.h  i8080_consts.h  i8080_opcodes.h  i8080_predef.h  i8080_predef_undef.h  i8080_types.h
libi8080emu/libi8080/src/: i8080.c  i8080_sync.c
libi8080emu/src/: bios.c  emu.c  emu_debug.c
libi8080emu/tests/: run_tests.cpp
shell/: CMakeLists.txt
shell/include/: emu.hpp  keyintr.hpp
shell/src/: emu.cpp  keyintr.cpp  main.cpp
src/: cpu.h  emu.c  emu.h  emu_debug.c  emu_debug.h  emu_types.h  i8080.c  i8080.h  i8080_internal.h  i8080_opcodes.h  keyintr.cpp  main.c  main.cpp  types.h  utilities.h
src/i8080/: i8080.c  i8080.h  i8080_build.h  i8080_internal.c  i8080_internal.h  i8080_opcodes.h  i8080_port.h  i8080_predef.h  i8080_predef_undef.h  i8080_preinclude.h  i8080_sync.h  i8080_types.h
src/i8080/internal/: i8080_consts.h  i8080_opcodes.h  i8080_predef.h  i8080_predef_undef.h  i8080_sync.h  i8080_types.h
tests/: CMakeLists.txt  INTERRUPT.COM  cpm2.2.com  emu.cpp  keyintr.cpp  main.cpp  test_interrupts.COM
